--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
             <div class="navbar-header">
                 <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand"><img src="http://static.phaninder.com/favicon.ico">
+                <a href="#" class="navbar-brand"><img src="images/logo.jpg">
                 </a>
             </div>
             <div class="collapse navbar-collapse">
@@ -35,7 +35,7 @@
                     </li>
                     <li ng-class="{ active: isActive('/getting-started')}"><a ng-href="#/getting-started">Getting Started</a>
                     </li>
-                    <li ng-class="{ active: isActive('/demo')}" ng-show="false"><a ng-href="#/demo">Demo</a>
+                    <li ng-class="{ active: isActive('/demo')}"><a ng-href="#/demo">Demo</a>
                     </li>
                 </ul>
             </div>
